# preventIA

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  README.md
src/: requirements.txt
src/back/: handlers.py  medrax_background_task.py  mistral_diabetes.py
src/back/models/: llm_outputs.py
src/back/prompts/: prompt_diabetes.py  prompt_heart.py  prompt_summary.py
